force-app/main/default/objects/BMCServiceDesk__SLA_Milestone_Actions__c/BMCServiceDesk__SLA_Milestone_Actions__c.object-meta.xml
<CustomObject>
    <description>SLA Milestone Actions</description>
    <label>SLA Milestone Action</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>SLA Milestone Action ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SLA Milestone Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>