force-app/main/default/objects/BMCServiceDesk__SLA_Milestone_Actions__c/fields/BMCServiceDesk__Email_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Email_Template_ID__c</fullName>
    <description>Email Template ID</description>
    <label>Email Template ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>