force-app/main/default/objects/BMCServiceDesk__SLA_Milestone_Actions__c/fields/BMCServiceDesk__FKSLA_Milestone__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKSLA_Milestone__c</fullName>
    <label>SLA Milestone</label>
    <referenceTo>BMCServiceDesk__SLA_Milestones__c</referenceTo>
    <relationshipLabel>SLA Milestone Actions</relationshipLabel>
    <relationshipName>SLA_Milestone_Actions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>