force-app/main/default/objects/BMCServiceDesk__SLA_Milestone_Actions__c/fields/BMCServiceDesk__Type__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Type__c</fullName>
    <description>Action Type, currently we have only 1 action type &apos;Send Email&apos;</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Send Email</fullName>
                <default>true</default>
                <label>Send Email</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>